# bigleague

./: Bigleague.toml  Cargo.toml  Containerfile  README.md  Rocket.toml  config.toml
src/: config.rs  db.rs  handlers.rs  main.rs  stats.rs
src/model/: db.rs  mod.rs  types.rs  util.rs
static/css/: style.css
templates/: bracket.html  footer.html  header.html  league.html  notfound.html  standings.html  standings.html.tera  user.html
