[package]
name = "ff-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
reqwest = {version = "0.11.18", features = ["blocking"]}
toml = "0.7.4"
serde = "1.0.164"
postgres = "0.19.5"
serde_json = "1.0.97"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]


[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
