[package]
name = "ff-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
toml = "0.7.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros"] }
tokio-postgres = "0.7.8"
mobc-postgres = "0.8.0"
mobc = "0.8.1"
tera = "1.19.0"
